--- a/src/components/accordion/Accordion.css
+++ b/src/components/accordion/Accordion.css
@@ -1,41 +1,37 @@
-.acc-wrapper {
+.cc-wrapper{
     display: flex;
     height: 100vh;
     width: 100vw;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 20px;
-  }
-  
-  .acc-wrapper button {
-      padding: 10px 20px;
-      background: #614101;
-      color: #fff;
-      font-weight: bold;
-      font-size: 20px;
-      cursor: pointer;
-  }
-  
-  .accordian {
-    width: 500px;
-  }
-  
-  .item {
-    background: #614101;
-    margin-bottom: 10px;
-    padding: 10px 20px;
-  }
-  
-  .title {
-    color: #ffffff;
+}
+.cc-wrapper button{
+    margin: 4px 0px;
+}
+
+.accordion{
+    background-color: bisque;
+    width: 600px;
+}
+.item{
+
+    padding: 4px;
+    cursor: pointer; 
+}
+.title{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    cursor: pointer;
-  }
-  
-  .acc-content {
-    color: #ffffff;
+}
+.acc-content{
+
+    padding:6px;
     height: auto;
-  }
+}
+
+.acc-content p{
+    background-color: rgb(228, 211, 190);
+    text-align: justify;
+}
+
